--- a/index.html
+++ b/index.html
@@ -1231,13 +1231,13 @@
         <!-- Image 9 -->
         <img src="images/9.jpg" alt="Photo 9" class="gallery-image" data-index="8">
         <!-- Image 10 -->
-        <img src="images/10.jpg" alt="Photo 10" class="gallery-image" data-index="9">
+        <img src="images/10.png" alt="Photo 10" class="gallery-image" data-index="9">
         <!-- Image 11 -->
-        <img src="images/11.jpg" alt="Photo 11" class="gallery-image" data-index="10">
+        <img src="images/11.png" alt="Photo 11" class="gallery-image" data-index="10">
         <!-- Image 12 -->
-        <img src="images/12.jpg" alt="Photo 12" class="gallery-image" data-index="11">
+        <img src="images/12.png" alt="Photo 12" class="gallery-image" data-index="11">
         <!-- Image 13 -->
-        <img src="images/13.jpg" alt="Photo 13" class="gallery-image" data-index="12">
+        <img src="images/13.png" alt="Photo 13" class="gallery-image" data-index="12">
         
         <button class="gallery-arrow next" id="nextBtn" onclick="changeImage(1)">❯</button>
       </div>
@@ -2459,4 +2459,5 @@
     gameLoop();
   </script>
 </body>
+
 </html>
